language/language.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function() { return returnParts; },
      peg$c1 = function() {return true;},
      peg$c2 = "\"",
      peg$c3 = peg$literalExpectation("\"", false),
      peg$c4 = function(notes, mods) {
          notes = new classes.Sequential(notes);
      	  for (var i = 0; i < mods.length; i++) {
      		  mods[i](notes);
      	  }
        },
      peg$c5 = function(note, seq) { return [note].concat(seq); },
      peg$c6 = function(note) { return [note]; },
      peg$c7 = "chord(",
      peg$c8 = peg$literalExpectation("chord(", false),
      peg$c9 = ")",
      peg$c10 = peg$literalExpectation(")", false),
      peg$c11 = function(seq) { return new classes.Chord(seq); },
      peg$c12 = /^[0-9]/,
      peg$c13 = peg$classExpectation([["0", "9"]], false, false),
      peg$c14 = "~",
      peg$c15 = peg$literalExpectation("~", false),
      peg$c16 = function(note, ext) { note.tempoChange(parseInt(ext) + 1); return note; },
      peg$c17 = function(note, ext) { note.tempoChange(ext.length + 1); return note; },
      peg$c18 = "(",
      peg$c19 = peg$literalExpectation("(", false),
      peg$c20 = function(seq) { return new classes.Sequential(seq); },
      peg$c21 = "rand(",
      peg$c22 = peg$literalExpectation("rand(", false),
      peg$c23 = function(seq) { return new classes.Random(seq); },
      peg$c24 = /^[A-G]/i,
      peg$c25 = peg$classExpectation([["A", "G"]], false, true),
      peg$c26 = /^[#b]/,
      peg$c27 = peg$classExpectation(["#", "b"], false, false),
      peg$c28 = function(note, oct) { return new classes.Note(Tone.Frequency(note+oct)); },
      peg$c29 = "o",
      peg$c30 = peg$literalExpectation("o", false),
      peg$c31 = function() { return new classes.Note(Tone.Frequency("D3")); },
      peg$c32 = "x",
      peg$c33 = peg$literalExpectation("x", false),
      peg$c34 = function() { return new classes.Note(Tone.Frequency("E3")); },
      peg$c35 = "--",
      peg$c36 = peg$literalExpectation("--", false),
      peg$c37 = function() { return new classes.Note(Tone.Frequency("F3")); },
      peg$c38 = "-",
      peg$c39 = peg$literalExpectation("-", false),
      peg$c40 = function() { return new classes.Note(Tone.Frequency("C3")); },
      peg$c41 = "_",
      peg$c42 = peg$literalExpectation("_", false),
      peg$c43 = function() { return new classes.Rest(); },
      peg$c44 = function(num) { return parseInt(num); },
      peg$c45 = function(mod) { return defaults.defaultOctave + mod; },
      peg$c46 = /^[+\-]/,
      peg$c47 = peg$classExpectation(["+", "-"], false, false),
      peg$c48 = function(signs) {
      	  let count = 0;
      	  for (var s of signs) {
      		  if (s === "+") count += 1;
      		  else count -= 1;
      	  }
      	  return count;
        },
      peg$c49 = function(mod, seq) { return [mod].concat(seq); },
      peg$c50 = function() { return []; },
      peg$c51 = ">>",
      peg$c52 = peg$literalExpectation(">>", false),
      peg$c53 = "octave",
      peg$c54 = peg$literalExpectation("octave", false),
      peg$c55 = function(mod) { return function(phrase) {phrase.octChange(mod);}; },
      peg$c56 = "pitch",
      peg$c57 = peg$literalExpectation("pitch", false),
      peg$c58 = function(mod) { return function(phrase) {phrase.pitchChange(mod);}; },
      peg$c59 = "duration",
      peg$c60 = peg$literalExpectation("duration", false),
      peg$c61 = function(mod) { return function(phrase) {phrase.tempoChange(mod);}; },
      peg$c62 = function(plr) { return plr; },
      peg$c63 = function(samp, fltr) {
          let first = new Tone.Volume(defaults.defaultVolume);
          let last = first;
          for (var f of fltr) {
            last.connect(f);
            if (f !== Tone.Master)
              last = f;
          }
          last.toMaster();
          samp.connect(first);

          return function(phrase) { let np = new classes.Part(samp, phrase); returnParts.push(np); };
        },
      peg$c64 = function(inst, attr, fltr) {
        for (var a of attr) {
          a(inst);
        }
        let retInstrument = new Tone.PolySynth(6, Tone.Synth, inst);
        let first = new Tone.Volume(defaults.defaultVolume);
        let last = first;
        for (var f of fltr) {
          last.connect(f);
          if (f !== Tone.Master)
            last = f;
        }
        last.toMaster();
        retInstrument.connect(first);

        return function(phrase) { let np = new classes.Part(retInstrument, phrase); returnParts.push(np); };
      },
      peg$c65 = "drums",
      peg$c66 = peg$literalExpectation("drums", false),
      peg$c67 = function() { return new Tone.Sampler(samples.drums); },
      peg$c68 = "piano",
      peg$c69 = peg$literalExpectation("piano", false),
      peg$c70 = function() { return new Tone.Sampler(samples.piano); },
      peg$c71 = "electricbass",
      peg$c72 = peg$literalExpectation("electricbass", false),
      peg$c73 = "bass",
      peg$c74 = peg$literalExpectation("bass", false),
      peg$c75 = function() { return new Tone.Sampler(samples.electricbass); },
      peg$c76 = "bassoon",
      peg$c77 = peg$literalExpectation("bassoon", false),
      peg$c78 = function() { return new Tone.Sampler(samples.bassoon); },
      peg$c79 = "cello",
      peg$c80 = peg$literalExpectation("cello", false),
      peg$c81 = function() { return new Tone.Sampler(samples.cello); },
      peg$c82 = "clarinet",
      peg$c83 = peg$literalExpectation("clarinet", false),
      peg$c84 = function() { return new Tone.Sampler(samples.clarinet); },
      peg$c85 = "contrabass",
      peg$c86 = peg$literalExpectation("contrabass", false),
      peg$c87 = function() { return new Tone.Sampler(samples.contrabass); },
      peg$c88 = "flute",
      peg$c89 = peg$literalExpectation("flute", false),
      peg$c90 = function() { return new Tone.Sampler(samples.flute); },
      peg$c91 = "frenchhorn",
      peg$c92 = peg$literalExpectation("frenchhorn", false),
      peg$c93 = "horn",
      peg$c94 = peg$literalExpectation("horn", false),
      peg$c95 = function() { return new Tone.Sampler(samples.frenchhorn); },
      peg$c96 = "acousticguitar",
      peg$c97 = peg$literalExpectation("acousticguitar", false),
      peg$c98 = function() { return new Tone.Sampler(samples.acousticguitar); },
      peg$c99 = "electricguitar",
      peg$c100 = peg$literalExpectation("electricguitar", false),
      peg$c101 = "guitar",
      peg$c102 = peg$literalExpectation("guitar", false),
      peg$c103 = function() { return new Tone.Sampler(samples.electricguitar); },
      peg$c104 = "nylonguitar",
      peg$c105 = peg$literalExpectation("nylonguitar", false),
      peg$c106 = function() { return new Tone.Sampler(samples.nylonguitar); },
      peg$c107 = "harmonium",
      peg$c108 = peg$literalExpectation("harmonium", false),
      peg$c109 = function() { return new Tone.Sampler(samples.harmonium); },
      peg$c110 = "harp",
      peg$c111 = peg$literalExpectation("harp", false),
      peg$c112 = function() { return new Tone.Sampler(samples.harp); },
      peg$c113 = "organ",
      peg$c114 = peg$literalExpectation("organ", false),
      peg$c115 = function() { return new Tone.Sampler(samples.organ); },
      peg$c116 = "saxophone",
      peg$c117 = peg$literalExpectation("saxophone", false),
      peg$c118 = function() { return new Tone.Sampler(samples.saxophone); },
      peg$c119 = "trombone",
      peg$c120 = peg$literalExpectation("trombone", false),
      peg$c121 = function() { return new Tone.Sampler(samples.trombone); },
      peg$c122 = "trumpet",
      peg$c123 = peg$literalExpectation("trumpet", false),
      peg$c124 = function() { return new Tone.Sampler(samples.trumpet); },
      peg$c125 = "tuba",
      peg$c126 = peg$literalExpectation("tuba", false),
      peg$c127 = function() { return new Tone.Sampler(samples.tuba); },
      peg$c128 = "violin",
      peg$c129 = peg$literalExpectation("violin", false),
      peg$c130 = function() { return new Tone.Sampler(samples.violin); },
      peg$c131 = "xylophone",
      peg$c132 = peg$literalExpectation("xylophone", false),
      peg$c133 = function() { return new Tone.Sampler(samples.xylophone); },
      peg$c134 = "triangle",
      peg$c135 = peg$literalExpectation("triangle", false),
      peg$c136 = function() { return {oscillator: {}, envelope: {release: .06}}; },
      peg$c137 = "soft",
      peg$c138 = peg$literalExpectation("soft", false),
      peg$c139 = function() { return {oscillator: {type: "sine2", partials: [1, .5]}, envelope: {release: .06}}; },
      peg$c140 = "fatsaw",
      peg$c141 = peg$literalExpectation("fatsaw", false),
      peg$c142 = function() { return {oscillator: {type: "fatsawtooth", spread: 40}, envelope: {release: .06}}; },
      peg$c143 = "saw",
      peg$c144 = peg$literalExpectation("saw", false),
      peg$c145 = function() { return {oscillator: {type: "sawtooth", spread: 40}, envelope: {release: .06}}; },
      peg$c146 = "square",
      peg$c147 = peg$literalExpectation("square", false),
      peg$c148 = function() { return {oscillator: {type: "fatsquare", spread: 10, count: 3}, envelope: {release: .06}};},
      peg$c149 = "pls no",
      peg$c150 = peg$literalExpectation("pls no", false),
      peg$c151 = function() { return {oscillator: {type: "pulse", width: .80}, envelope: {release: .06}}; },
      peg$c152 = function(attr, seq) { return [attr].concat(seq); },
      peg$c153 = "wave",
      peg$c154 = peg$literalExpectation("wave", false),
      peg$c155 = "sine",
      peg$c156 = peg$literalExpectation("sine", false),
      peg$c157 = "sawtooth",
      peg$c158 = peg$literalExpectation("sawtooth", false),
      peg$c159 = function(wave) { return (obj) => { obj.oscillator.type = wave; }; },
      peg$c160 = "volume",
      peg$c161 = peg$literalExpectation("volume", false),
      peg$c162 = function(sign, num) { if (sign !== null) num *= -1; return (obj) => { obj.volume = num+defaults.defaultVolume; }; },
      peg$c163 = ">",
      peg$c164 = peg$literalExpectation(">", false),
      peg$c165 = function(fltr, seq) { return [fltr].concat(seq); },
      peg$c166 = "&",
      peg$c167 = peg$literalExpectation("&", false),
      peg$c168 = function(seq) { return [Tone.Master].concat(seq); },
      peg$c169 = "pingpong",
      peg$c170 = peg$literalExpectation("pingpong", false),
      peg$c171 = function(delay) { return new Tone.PingPongDelay(delay*defaults.defaultGap); },
      peg$c172 = /^[0-9.]/,
      peg$c173 = peg$classExpectation([["0", "9"], "."], false, false),
      peg$c174 = "/",
      peg$c175 = peg$literalExpectation("/", false),
      peg$c176 = /^[.0-9]/,
      peg$c177 = peg$classExpectation([".", ["0", "9"]], false, false),
      peg$c178 = function(num1, num2) {
      	  if (num2 === "") return parseFloat(num1);
      	  return parseFloat(num1) / num2.replace("/", "0");
        },
      peg$c179 = /^[ \t\r\n]/,
      peg$c180 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsemultiLines();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsemultiLines() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseline();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsemultiLines();
        if (s3 !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      peg$savedPos = peg$currPos;
      s0 = peg$c1();
      if (s0) {
        s0 = void 0;
      } else {
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseline() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 34) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsenoteseq();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 34) {
              s5 = peg$c2;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c3); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = peg$parsemodifierseq();
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c4(s3, s7);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsenoteseq() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsenote();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsenoteseq();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsenote();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c6(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parsenote() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c7) {
      s1 = peg$c7;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsenoteseq();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 41) {
              s5 = peg$c9;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c10); }
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c11(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsenotestart();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = [];
          if (peg$c12.test(input.charAt(peg$currPos))) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c13); }
          }
          if (s5 !== peg$FAILED) {
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              if (peg$c12.test(input.charAt(peg$currPos))) {
                s5 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c13); }
              }
            }
          } else {
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            s3 = input.substring(s3, peg$currPos);
          } else {
            s3 = s4;
          }
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 126) {
              s4 = peg$c14;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c15); }
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c16(s1, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsenotestart();
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$currPos;
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 126) {
              s5 = peg$c14;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c15); }
            }
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$currPos;
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 126) {
                s5 = peg$c14;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c15); }
              }
              if (s5 !== peg$FAILED) {
                s4 = [s4, s5];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          }
          if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c17(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 40) {
            s1 = peg$c18;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c19); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
              s3 = peg$parsenoteseq();
              if (s3 !== peg$FAILED) {
                s4 = peg$parse_();
                if (s4 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 41) {
                    s5 = peg$c9;
                    peg$currPos++;
                  } else {
                    s5 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c10); }
                  }
                  if (s5 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c20(s3);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            if (input.substr(peg$currPos, 5) === peg$c21) {
              s1 = peg$c21;
              peg$currPos += 5;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c22); }
            }
            if (s1 !== peg$FAILED) {
              s2 = peg$parse_();
              if (s2 !== peg$FAILED) {
                s3 = peg$parsenoteseq();
                if (s3 !== peg$FAILED) {
                  s4 = peg$parse_();
